--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hej</h1>
-<h2>Hej2</h2>
+<h1>Hola</h1>
+<h2>adios</h2>
+<h3>Furia > Falcons</h3>
 
 </body>
 </html>
