--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hej</h1>
-<h2>Hej2</h2>
-<p>ugabugaugabuga</p>
+<h1>Hey</h1>
+<h2>Hej3</h2>
+<p>Blabla bla</p>
 
 </body>
 </html>
